--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --public-url ./ --out-dir docs",
-    "pretty":
-      "prettier --tab-width 2 --print-width 100 --single-quote --jsx-bracket-same-line --arrow-parens 'always' parser 'typescript' --write 'src/**/*.{js,jsx,json,css}'"
+    "pretty": "prettier --tab-width 2 --print-width 100 --single-quote --jsx-bracket-same-line --arrow-parens 'always' parser 'typescript' --write 'src/**/*.{js,jsx,json,css}'"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -15,10 +14,16 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "serve-favicon": "~2.4.5",
+    "styled-components": "^3.1.3"
   },
   "devDependencies": {
+    "@types/react": "^16.0.35",
+    "@types/react-dom": "^16.0.3",
     "parcel-bundler": "^1.5.1",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "typescript": "^2.6.2"
   }
 }
