--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "font-awesome": "^4.7.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "react": "^16.2.0",
